//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "dxos/schema.proto";

package dxos.experimental.kai;

//
// Types
//

message LatLng {
  fixed32 lat = 1;
  fixed32 lng = 2;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  LatLng coordinates = 5;
}

//
// Internal
// TODO(dmaretskyi): Move to separate file.
//

// TODO(burdon): First-class typed links?
message Link {
  option (object) = true;

  // TODO(burdon): Keys.
  string source = 1;
  string target = 2;
//  repeated string tags = 3;
  string tag = 3;
}

//
// Objects
//

message Table {
  option (object) = true;

  string type = 1;
}

message Organization {
  option (object) = true;

  string name = 1;
  string description = 2;
  string website = 3;
  repeated Contact people = 4;
  repeated Project projects = 5;
  Address address = 6;
}

message Contact {
  option (object) = true;

  string name = 1;
  string username = 2;
  string email = 3;
  Address address = 4;
}

message Task {
  option (object) = true;

  string title = 1;
  bool completed = 2;
  Contact assignee = 3;
  Task previous = 4;
  repeated Task sub_tasks = 5;
}

message TaskList {
  option (object) = true;

  string title = 1;
  repeated Task tasks = 2;
}

message Project {
  option (object) = true;

  string title = 1;
  dxos.schema.Text description = 2;
  string url = 3;
  repeated Contact team = 4;
  repeated Task tasks = 5;
//  repeated string tags = 6;
  string tag = 6;
}

message Kanban {
  option (object) = true;

  string title = 1;
}

message Document {
  option (object) = true;

  string title = 1;
  dxos.schema.Text content = 2;
//  repeated string tags = 2;
  string tag = 3;
}

message DocumentStack {
  option (object) = true;

  string title = 1;
  repeated dxos.schema.Document sections = 2;
}

// TODO(burdon): System type for external GUIDs.
message Source {
  string guid = 1; // TODO(burdon): `id` should be allowed on non-objects.
}

message Message {
  option (object) = true;

  message Contact {
    option (object) = true; // TODO(burdon): REMOVE.
    string email = 1;
    string name = 2;
    Contact contact = 3;
  }

  // TODO(burdon): Timestamp (across all objects).
  Source source = 1;
  string date = 2;
  Contact from = 3;
  repeated Contact to = 4;
  string subject = 5;
  string body = 6;
}

message Event {
  option (object) = true;

  string title = 1;
  // TODO(burdon): Timestamp system primitive type.
  string start = 2;
  string end = 3;
  Address location = 4;
  repeated Contact members = 5;
}

message Sketch {
  option (object) = true;

  message Point {
    option (object) = true; // TODO(burdon): REMOVE.
    int32 x = 1;
    int32 y = 2;
  }

  message Path {
    option (object) = true; // TODO(burdon): REMOVE.
    int32 timestamp = 1;
    int32 width = 2;
    string color = 3;
    repeated Point points = 4;
  }

  string title = 1;
  repeated Path paths = 2;
}

message File {
  option (object) = true;

  string name = 1;
  string timestamp = 2;
  string cid = 3;
}

message NoteBoard {
  option (object) = true;

  message Location {
    option (object) = true; // TODO(burdon): REMOVE.
    string object_id = 1;
    int32 x = 2;
    int32 y = 3;
  }

  string title = 1;
  repeated Location locations = 2;
}

message Note {
  option (object) = true;

  string title = 1;
  dxos.schema.Text content = 2;
  string color = 3;
}
